Fix layout issues on Safari.

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -30,10 +30,14 @@ Tags: vitamina, landing page, white, yellow, gray, black, css3, html5, animation
   box-sizing: border-box;
 }
 
-html {
+html,
+body {
   height: 100%;
-  font-size: 50%;
   overflow-x: hidden;
+}
+
+html {
+  font-size: 50%;
 
   @include media($medium-screen-up) {
     font-size: 62.5%;
@@ -45,7 +49,6 @@ body {
   color: #ccc;
   font-family: $roboto;
   padding: 0 0 10px;
-  overflow-x: hidden;
 }
 
 img {
@@ -54,8 +57,7 @@ img {
 
 .container {
   display: flex;
-  flex-flow: column wrap;
-  //margin: 30px auto 0 0;
+  flex-flow: row wrap;
   margin: 0 auto 0 0;
   max-width: 1720px;
   padding: 0 10px;
@@ -66,7 +68,7 @@ img {
   }
 
   @include media($medium-screen-up) {
-    flex-flow: row wrap;
+    //flex-flow: row wrap;
     padding: 0 20px 0 0;
   }
 }
